--- a/Source/frontend/pagina 3/index.html
+++ b/Source/frontend/pagina 3/index.html
@@ -47,10 +47,10 @@
                         <h3 class="title" style="padding-top: 30px;">Sensor 1</h3>
                     </div>
                     <div class="row px-2 no-gutters" style="padding-bottom: 25px;">
-                        <div class="col-6; justify-content-right">
-                            <button class="btn btn1"><i class="bi bi-wifi"></i><h4>BOM</h4></button>
-                            <button class="btn btn1"><i class="bi bi-battery-full"></i><h4>89%</h4></button>
-                            <button class="btn btn1"><i class="bi bi-file-bar-graph"></i><h4>Visualizar</h4></button>
+                        <div class="col-6 justify-content-right">
+                            <button class="btn btn1 d-flex align-items-center"><i class="bi bi-wifi mx-2"></i><div class="ticones">BOM</div></button>
+                            <button class="btn btn1 d-flex align-items-center"><i class="bi bi-battery-full mx-2"></i><div class="ticones">89%</div></button>
+                            <button class="btn btn1 d-flex align-items-center"><i class="bi bi-file-bar-graph mx-2"></i><div class="ticones">Visualizar</div></button>
                         </div>
                     </div>
                 </div>
@@ -58,13 +58,13 @@
                     <div class="card-block" style="padding-bottom: 25px;">
                         <h3 class="card-title" style="padding-bottom: 15px;">Estufa 2</h3>
                         <h2><img class="card-img-top" src="./icones/monitoramento.png" alt="Card image cap"></h2>
-                        <h3 class="title" style="padding-top: 30px;">Sensor 2</h3>
+                        <h3 class="title" style="padding-top: 30px; text-align: center;">Sensor 2</h3>
                     </div>
-                    <div class="row px-2 no-gutters" style="padding-bottom: 25px;">
-                        <div class="col-6; justify-content-right">
-                            <button class="btn btn1"><i class="bi bi-wifi"></i><h4>FRACO</h4></button>
-                            <button class="btn btn1"><i class="bi bi-battery-half"></i><h4>45%</h4></button>
-                            <button class="btn btn1"><i class="bi bi-file-bar-graph"></i><h4>Visualizar</h4></button>
+                    <div class="row">
+                        <div class="d-flex flex-column justify-content-center">
+                            <button class="btn btn1 d-flex align-items-center my-2"><i class="bi bi-wifi mx-2"></i><div class="ticones">FRACO</div></button>
+                            <button class="btn btn1 d-flex align-items-center my-2"><i class="bi bi-battery-half mx-2"></i><div class="ticones">45%</div></button>
+                            <button class="btn btn1 d-flex align-items-center my-2"><i class="bi bi-file-bar-graph mx-2"></i><div class="ticones">Visualizar</div></button>
                         </div>
                     </div>
                 </div>
