--- a/Source/frontend/temp_e_umidade/index.html
+++ b/Source/frontend/temp_e_umidade/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="text-center" style = "margin-bottom: 50px;">INFORMAÇÕES</h1>
+    <h1 class="text-center" style = "margin-bottom: 50px;">INFORMAÇÕES - ESTUFA 1</h1>
     <div class="row">
       <div class = "col-md-4 d-flex flex-column justify-content-center">
           <h2 style = "margin-bottom: 20px; text-align: center;">Temperatura</h2>
