correção de id HTML e AJAX

--- a/Source/frontend/index.html
+++ b/Source/frontend/index.html
@@ -23,7 +23,6 @@
 
       
       <link href="style.css" rel="stylesheet">
-      <script src="tempumi.js"></script>
 </head>
 <body>
   <div class="container">
@@ -70,7 +69,7 @@
               <div class="skill">
                   <div class="outer">
                       <div class="inner">
-                          <div id="status">
+                          <div id="estufa">
                             Regular
                           </div>
                         </div>
@@ -84,5 +83,7 @@
           </div> 
     </div>   
   </div>
+
 </body>
+<script src="tempumi.js"></script>
 
