--- a/Source/frontend/Alerta/index.html
+++ b/Source/frontend/Alerta/index.html
@@ -35,22 +35,21 @@
             <div class="row">
                 <div class="d-flex justify-content-center">
                     <div class="d-flex flex-column">
-                        <div class="circuloTemp d-flex align-items-center my-2">42º</div>
+                        <div class="circuloTemp d-flex align-items-center my-2" id="temperatura">42º</div> 
                         <h4>Temperatura</h4>
                     </div>
                     <div class="d-flex flex-column">
-                        <div class="circuloUmid d-flex align-items-center my-2">40%</div>
+                        <div class="circuloUmid d-flex align-items-center my-2" id="umidade">40%</div>
                         <h4>Umidade</h4>
                     </div>
                 </div>
             </div>
-
             <div class="buttons">
                 <button class="close-btn">Emitir Alerta</button>
                 <button>Regular Janelas</button>
             </div>
       </div>
     </section>
-    <script src="script.js"></script>
 </body>
 </html>
+<script src="script.js"></script>
