--- a/Source/frontend/index.html
+++ b/Source/frontend/index.html
@@ -40,7 +40,7 @@
                     <div class="input">
                         <input type="text" placeholder="IDENTIFICADOR" id="stoveName" class="inputTxT">
                         <input type="text" placeholder="COORDENADOR" id="manager" class="inputTxT">
-                        <button onclick="saveSensor" id="save">Salvar</button>
+                        <button onclick="saveSensor()" id="save">Salvar</button>
                     </div>
                 </div>
              </div>
@@ -51,6 +51,7 @@
                     </button>
                     <h1>add sensor</h1>
                 </div>
+                <div id="sensorRows" class="allSensors"></div>
             </div>
         </section>
         <section class="thankyou">
