--- a/Source/frontend/info.html
+++ b/Source/frontend/info.html
@@ -22,8 +22,8 @@
                 </div>
                 <div class="row">
                     <div class="col-sm" id="med">
-                        <div class="circular-progress;d-flex justify-content-center " id="redn" style="background-color: blue">
-                            <span class="progress-value" id="temp">27°</span>
+                        <div class="circular-progress d-flex justify-content-center " id="redn">
+                            <span class="progress-value" id="tempLabel" style="color: black;">27°</span>
                         </div>
                         <div id="ajj"><h3 style="color: #0F6952;">TEMPERATURA</h3></div>
                     </div>
